<?xml version="1.0"?>
<package format="2">
  <name>StereoCamera</name>
  <version>2.6.0</version>
  <description>
    "StereoCamera" is a ROS package to show how to use the ROS wrapper with <a href="http://wiki.ros.org/ar_track_alvar">"ar_track_alvar"</a>
  </description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>  

  <!--exec_depend>ar_track_alvar</exec_depend-->
</package>
